[package]
name = "blake3-hkdf-js-sys"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
description = "blake3 hkdf porting in wasm"
repository = "https://github.com/web3-social/blake3-hkdf-js-sys"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
blake3 = { version = "1.3.3", features = [ "traits-preview" ] }
hkdf = "0.12.3"
js-sys = "0.3.60"
hex = "0.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
